force-app/main/default/objects/Periode__c/Periode__c.object-meta.xml
<CustomObject>
    <description>Pour indiquer les périodes reroutage et de backup.</description>
    <label>Période</label>
    <nameField>
        <displayFormat>PER-{0000}</displayFormat>
        <label>Numéro de Période</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Périodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>