force-app/main/default/objects/Periode__c/fields/Attention__c.field-meta.xml
<CustomField>
    <fullName>Attention__c</fullName>
    <defaultValue>&quot;Avant de créer une période veuillez vérifier qu&#39;il n&#39;existe pas déjà une période de même type sur les dates que vous souhaitez indiquer. Deux périodes de même type ne peuvent pas se chevaucher.&quot;</defaultValue>
    <label>Attention</label>
    <length>200</length>
    <type>Text</type>
</CustomField>