force-app/main/default/objects/Periode__c/fields/Nom_du_compte__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_compte__c</fullName>
    <label>Nom du compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Surcharge / Backup</relationshipLabel>
    <relationshipName>Reroutages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>