force-app/main/default/objects/Periode__c/fields/Ordre_d_affichage__c.field-meta.xml
<CustomField>
    <fullName>Ordre_d_affichage__c</fullName>
    <formula>IF ( Statut__c =&quot;En cours&quot;,&quot;3&quot;, 
IF( Statut__c =&quot;A venir&quot;,&quot;2&quot;, 
IF (Statut__c=&quot;Passé&quot;,&quot;1&quot;,&quot;null&quot;))) 
&amp; TEXT(YEAR( Date_de_debut__c )) &amp; 

IF (LEN(TEXT(MONTH(Date_de_debut__c)))=1,&quot;0&quot; &amp; TEXT(MONTH(Date_de_debut__c)) ,TEXT(MONTH(Date_de_debut__c))) 
&amp; 

IF (LEN(TEXT(DAY(Date_de_debut__c)))=1,&quot;0&quot; &amp; TEXT(DAY(Date_de_debut__c)) ,TEXT(DAY(Date_de_debut__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordre d&#39;affichage</label>
    <type>Text</type>
</CustomField>