force-app/main/default/objects/Periode__c/fields/Periode_de_backup__c.field-meta.xml
<CustomField>
    <fullName>Periode_de_backup__c</fullName>
    <label>Période de backup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>