force-app/main/default/objects/Periode__c/fields/Seuil_calcule__c.field-meta.xml
<CustomField>
    <fullName>Seuil_calcule__c</fullName>
    <formula>Nom_du_compte__r.Seuil_calcule__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seuil calculé</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>