force-app/main/default/objects/Periode__c/fields/Seuil_contractuel__c.field-meta.xml
<CustomField>
    <fullName>Seuil_contractuel__c</fullName>
    <formula>text(Nom_du_compte__r.Seuil_contractuel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seuil contractuel</label>
    <type>Text</type>
</CustomField>