force-app/main/default/objects/Periode__c/fields/Seuil_temporaire__c.field-meta.xml
<CustomField>
    <fullName>Seuil_temporaire__c</fullName>
    <label>Seuil temporaire</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>