force-app/main/default/objects/Periode__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <formula>IF ( Date_de_debut__c &gt;  TODAY() ,$Label.Periode_A_Venir,
IF ( Date_de_fin__c  &lt;   TODAY() ,$Label.Periode_Passe,$Label.Periode_En_Cours))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statut</label>
    <type>Text</type>
</CustomField>