force-app/main/default/objects/Periode__c/fields/Type_de_periode__c.field-meta.xml
<CustomField>
    <fullName>Type_de_periode__c</fullName>
    <inlineHelpText>Avant de créer une période veuillez vérifier qu&#39;il n&#39;existe pas déjà une période de même type sur les dates que vous souhaitez indiquer. Deux périodes de même type ne peuvent pas se chevaucher.</inlineHelpText>
    <label>Type de période</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>41</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>43</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>