force-app/main/default/objects/Periode__c/recordTypes/FR_Pudo_active_reroutage.recordType-meta.xml
<RecordType>
    <fullName>FR_Pudo_active_reroutage</fullName>
    <active>true</active>
    <label>FR_Pudo_active_reroutage</label>
</RecordType>