force-app/main/default/objects/Periode__c/recordTypes/FR_Pudo_Backup.recordType-meta.xml
<RecordType>
    <fullName>FR_Pudo_Backup</fullName>
    <active>true</active>
    <label>FR_Pudo_Backup</label>
</RecordType>