force-app/main/default/objects/Periode__c/recordTypes/FR_Pudo_exclus.recordType-meta.xml
<RecordType>
    <fullName>FR_Pudo_exclus</fullName>
    <active>true</active>
    <label>FR_Pudo_exclus</label>
</RecordType>