force-app/main/default/objects/Periode__c/recordTypes/FR_Seuil_temporaire.recordType-meta.xml
<RecordType>
    <fullName>FR_Seuil_temporaire</fullName>
    <active>true</active>
    <label>FR_Seuil_temporaire</label>
</RecordType>