force-app/main/default/objects/Periode__c/validationRules/PERI_VR08_DateFinSuperieure.validationRule-meta.xml
<ValidationRule>
    <fullName>PERI_VR08_DateFinSuperieure</fullName>
    <active>true</active>
    <description>La date de fin doit être supérieure ou égale à la date de début.</description>
    <errorConditionFormula>and( not 
 ($User.BypassValidationRule__c ),
Date_de_fin__c &lt; Date_de_debut__c )</errorConditionFormula>
    <errorDisplayField>Date_de_fin__c</errorDisplayField>
    <errorMessage>La date de fin doit être supérieure ou égale à la date de début.</errorMessage>
</ValidationRule>