force-app/main/default/objects/Periode__c/validationRules/RERO_VR01_DateDebutToday.validationRule-meta.xml
<ValidationRule>
    <fullName>RERO_VR01_DateDebutToday</fullName>
    <active>true</active>
    <description>date de début doit etre non modifiable si le statut de la période est : en cours ou passé</description>
    <errorConditionFormula>AND(
	!$User.BypassValidationRule__c, 
	NOT ISNEW(),
	PRIORVALUE(Date_de_debut__c)  &lt;  TODAY(),
	ISCHANGED(Date_de_debut__c) 
)</errorConditionFormula>
    <errorDisplayField>Date_de_debut__c</errorDisplayField>
    <errorMessage>Vous pouvez pas modifier la date de début d&#39;une période avec statut : en cours ou passé</errorMessage>
</ValidationRule>