force-app/main/default/objects/Periode__c/validationRules/RERO_VR04_SeuilTempSupSC.validationRule-meta.xml
<ValidationRule>
    <fullName>RERO_VR04_SeuilTempSupSC</fullName>
    <active>true</active>
    <description>Seuil temporaire doit être inférieur ou égal au Seuil calculé.</description>
    <errorConditionFormula>AND ( 
!$User.BypassValidationRule__c, 
RecordType.Name = &quot;FR_Seuil_temporaire&quot;, 
Seuil_temporaire__c  &gt;  ROUND(Nom_du_compte__r.Seuil_calcule__c,0))</errorConditionFormula>
    <errorDisplayField>Seuil_temporaire__c</errorDisplayField>
    <errorMessage>Vous devez renseigner un Seuil temporaire inférieur ou égal au Seuil calculé.</errorMessage>
</ValidationRule>