force-app/main/default/objects/Periode__c/validationRules/RERO_VR05_DateDebutToday.validationRule-meta.xml
<ValidationRule>
    <fullName>RERO_VR05_DateDebutToday</fullName>
    <active>true</active>
    <description>Date de début doit être supérieure ou égale à aujourd&#39;hui.</description>
    <errorConditionFormula>AND ( 
   !$User.BypassValidationRule__c, 
   Date_de_debut__c  &lt;  TODAY(),
   OR(ISNEW() , PRIORVALUE(Date_de_debut__c  ) &gt;= TODAY())
   
)</errorConditionFormula>
    <errorDisplayField>Date_de_debut__c</errorDisplayField>
    <errorMessage>Veuillez saisir la date de début valide :  elle doit être supérieure ou égale à aujourd&#39;hui.</errorMessage>
</ValidationRule>