force-app/main/default/objects/Periode__c/validationRules/RERO_VR06_DatesObligatoiresBackup.validationRule-meta.xml
<ValidationRule>
    <fullName>RERO_VR06_DatesObligatoiresBackup</fullName>
    <active>true</active>
    <description>Date de début et date de fin sont obligatoires.</description>
    <errorConditionFormula>and(  and(
           ISPICKVAL( Type_de_periode__c , &quot;50&quot;) ,
           ISBLANK(TEXT( Periode_de_backup__c))
            ),

or(
    ISBLANK(Date_de_debut__c) ,
    ISBLANK( Date_de_fin__c )
))</errorConditionFormula>
    <errorDisplayField>Date_de_debut__c</errorDisplayField>
    <errorMessage>Veuillez saisir la date de début et la date de fin.</errorMessage>
</ValidationRule>