force-app/main/default/objects/Periode__c/validationRules/RERO_VR07_SeuiTemp31JMaxi.validationRule-meta.xml
<ValidationRule>
    <fullName>RERO_VR07_SeuiTemp31JMaxi</fullName>
    <active>true</active>
    <description>La période de seuil temporaire ne doit pas excéder  31 jours.</description>
    <errorConditionFormula>AND ( 
      and(Not($User.BypassValidationRule__c), 
           RecordTypeId =&quot;01258000000gnfF&quot;),
    (Date_de_fin__c - Date_de_debut__c )&gt;31)</errorConditionFormula>
    <errorDisplayField>Date_de_fin__c</errorDisplayField>
    <errorMessage>La période de seuil temporaire ne doit pas excéder  31 jours.</errorMessage>
</ValidationRule>